# loggingnight

./: .gitignore  .pre-commit-config.yaml  .python-version  Procfile  README.md  loggingnight.py  notes.txt  pyproject.toml  requirements-base.txt  requirements.txt  webapp.py
.ebextensions/: options.config  static-files.config
.github/workflows/: codeql-analysis.yml  eb_deploy_dev.yml  eb_deploy_prod.yml
static/: sitemap.txt
templates/: index.html
templates/assets/bootstrap/css/: bootstrap.min.css
templates/assets/css/: styles.min.css
templates/assets/js/: script.min.js
