[tool.poetry]
name = "loggingnight"
version = "0.1.0"
description = ""
authors = ["Kris Knigga <kris@knigga.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.3.2"
python-dateutil = "^2.8.2"
pytz = "^2023.3"
requests = "^2.31.0"
requests-cache = "^1.0.1"
schedule = "^1.2.0"
skyfield = "^1.46"
timezonefinder = "^6.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
prospector = {extras = ["with-bandit", "with-mypy"], version = "^1.9.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
