[tool.poetry]
name = "loggingnight"
version = "0.1.0"
description = ""
authors = ["Kris Knigga <kris@knigga.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.3.2"
python-dateutil = "^2.8.2"
requests = "^2.31.0"
requests-cache = "^1.0.1"
schedule = "^1.2.0"
skyfield = "^1.46"
timezonefinder = {extras = ["numba"], version = "^6.2.0"}
sentry-sdk = {extras = ["flask"], version = "^2.8.0"}

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
prospector = {extras = ["with-bandit", "with-mypy"], version = "^1.9.0"}
pre-commit = "^3.4.0"
types-requests = "^2.31.0.7"
types-python-dateutil = "^2.8.19.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
